fix center align

--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -13,9 +13,6 @@
 
 /* Content */
 #page_content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     flex-grow: 1;
     padding: 3rem;
     width: 100vw;
